--- a/Bodybuilder/Base.lproj/Main.storyboard
+++ b/Bodybuilder/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--SIŁOWNIA-->
+        <!--MAIN-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Bodybuilder" customModuleProvider="target" sceneMemberID="viewController">
@@ -25,9 +25,6 @@
                                 <state key="normal" title="ĆWICZ">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
-                                <connections>
-                                    <segue destination="CxM-ry-SN0" kind="show" id="XRN-84-Kbx"/>
-                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="Xfb-Sr-FNm">
                                 <frame key="frameInset" minY="90" width="375" height="370"/>
@@ -36,13 +33,65 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="SIŁOWNIA" id="6Zw-MC-klj"/>
+                    <tabBarItem key="tabBarItem" title="MAIN" id="6Zw-MC-klj"/>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="110.19490254872565"/>
+        </scene>
+        <!--PRACA-->
+        <scene sceneID="9Tq-IG-8ki">
+            <objects>
+                <viewController id="sOR-Xp-XiE" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MWm-Da-id5"/>
+                        <viewControllerLayoutGuide type="bottom" id="toE-DA-Zir"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="F22-1j-HF0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2y-fV-ta8">
+                                <frame key="frameInset" minX="261" minY="305" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="PRACA"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="PRACA" id="Ak0-p3-yX2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F7C-qe-3yN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-705" y="888"/>
+        </scene>
+        <!--RESTAURACJA-->
+        <scene sceneID="cWY-3j-ikF">
+            <objects>
+                <viewController id="Tpq-xm-qKM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eVC-bg-RjW"/>
+                        <viewControllerLayoutGuide type="bottom" id="40Y-EW-oTe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qcN-co-Wna">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="74P-Zu-W4Z">
+                                <frame key="frameInset" minX="126" minY="318" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="RESTAURACJA"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="RESTAURACJA" id="1kK-gf-yAu"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Se2-WR-v5j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137" y="889"/>
         </scene>
         <!--GYM-->
         <scene sceneID="1Lb-zN-ifR">
@@ -55,14 +104,22 @@
                     <view key="view" contentMode="scaleToFill" id="7xI-tQ-MTN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WhN-ro-q0g">
+                                <frame key="frameInset" minX="93" minY="318" width="117" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="GYM"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="GYM" id="btM-MI-oZM"/>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wJl-dp-7qx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="915"/>
+            <point key="canvasLocation" x="1076" y="887.40629685157433"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="SFn-YW-bFQ">
@@ -74,12 +131,32 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Eyy-Iv-SFp"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="9oQ-e8-51Z"/>
+                        <segue destination="Tpq-xm-qKM" kind="relationship" relationship="viewControllers" id="6Vs-hS-eS6"/>
+                        <segue destination="sOR-Xp-XiE" kind="relationship" relationship="viewControllers" id="jyX-Qz-BDz"/>
+                        <segue destination="CxM-ry-SN0" kind="relationship" relationship="viewControllers" id="vQU-9d-lXk"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jnb-2t-y7a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="110.19490254872565"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bYy-0a-Rqz">
+            <objects>
+                <viewController id="UVD-YT-pcT" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tQC-XZ-F4P"/>
+                        <viewControllerLayoutGuide type="bottom" id="9Be-Gb-oBJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aCE-JS-zIg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Rn-PF-SDH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
